<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>th.co.locus</groupId>
	<artifactId>jlocrm</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>JLO CRM</name>
	<description>JLO CRM</description>
	<packaging>jar</packaging>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
	</properties>

	<!--
	<repositories>
		<repository>
			<id>locus-repo-private</id>
			<url>http://192.168.10.179:8081/nexus/repository/maven-public/</url>
		</repository>
		<repository>
			<id>locus-repo-public</id>
			<url>http://jlo.locus.co.th/nexus/repository/maven-public/</url>
		</repository>
	</repositories>
	-->

	<parent>
		<groupId>th.co.locus.jlo</groupId>
		<artifactId>jlo-starter-parent</artifactId>
		<version>1.2.6</version>
	</parent>
	<dependencies>
		<dependency>
			<groupId>th.co.locus.jlo</groupId>
			<artifactId>jlo-common-lib</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.5.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<dependency>
			<groupId>com.linecorp.bot</groupId>
			<artifactId>line-bot-messaging-api-client</artifactId>
			<version>8.6.0</version>
		</dependency>
		<dependency>
			<groupId>com.linecorp.bot</groupId>
			<artifactId>line-bot-webhook</artifactId>
			<version>8.6.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			
			
	      <plugin>
	        <groupId>org.openrewrite.maven</groupId>
	        <artifactId>rewrite-maven-plugin</artifactId>
	        <version>6.16.1</version>
	        <configuration>
	          <exportDatatables>true</exportDatatables>
	          <activeRecipes>
	            <recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
	          </activeRecipes>
	        </configuration>
	        <dependencies>
	          <dependency>
	            <groupId>org.openrewrite.recipe</groupId>
	            <artifactId>rewrite-migrate-java</artifactId>
	            <version>3.16.0</version>
	          </dependency>
	        </dependencies>
	      </plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.xml</include>
				</includes>
			</resource>
		</resources>
	</build>
</project>
